--- a/Index.html
+++ b/Index.html
@@ -20,7 +20,7 @@
             
 
             <br>
-            <!-- Image -->
+            <!-- Image, if dog not found alt = "My Dog Image Appears" -->
             <img class="img-dog" src="dog.jpg" alt="My Dog Image">
         </div>
 
